# reasons-service

./: .gitignore  CLAUDE.md  Dockerfile  README.md  architecture.json  docker-compose.yml  hatch_build.py  langgraph.json  pyproject.toml
.claude/: checkpoint.md
.code-expert/: topics.json
alembic/: env.py
alembic/versions/: 0001_add_project_public_column.py  af7a7f2dd4e8_add_topics_table.py  b3c1a5e7f912_add_visible_tags_to_users.py  c4d2b6f8a123_rename_projects_to_domains.py
eval/: meta_questions.json  meta_scoring.py  meta_synthesis_questions.json  meta_synthesis_scoring.py  meta_systems.py  open_ended.json  questions.json  report.py  run_eval.py  run_meta_citation_eval.py  run_meta_eval.py  run_meta_synthesis_eval.py  runner.py  scoring.py  systems.py
eval/results/: 2026-03-06_full.json  2026-03-06_full.md  2026-03-06_run.json  2026-03-25_meta_citations.json  2026-03-25_meta_citations_single.json  2026-03-25_meta_cross_test.json  2026-03-25_meta_oos_test.json  2026-03-25_meta_routing.json  2026-03-25_meta_routing_full.json  2026-03-25_meta_synthesis.json  cost_test.json  test_run.json  test_run.md
reasons_service/: __init__.py  app.py  auth.py  chunking.py  config.py  embeddings.py  mcp.py  mcp_auth.py  rbac.py
reasons_service/api/: ask.py  chat.py  data.py  domains.py  meta_chat.py  pipeline.py  (+2 more)
scripts/: backfill_source_urls.py  build_embeddings.py  import_expert.py  import_meta_expert.py  load_reasons_db.py  manage_users.py  start.sh  upload_reasons_db.sh
tests/: conftest.py  test_ask.py  test_auth.py  test_llm_mode.py  test_search.py  test_sqlite.py
(+98 files in other folders)
