[project]
name = "reasons-service"
version = "0.6.0"
description = "Hosted Reasons knowledge base service — reasonsforge.com"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "langgraph>=0.3",
    "langchain-google-vertexai>=2.0",
    "anthropic[vertex]>=0.49",
    "sqlalchemy[asyncio]>=2.0",
    "httpx>=0.27",

    "pydantic>=2.0",
    "fastembed>=0.7.4",
    "langchain>=0.3",
    "langfuse>=3.0.0",
    "ftl-reasons @ git+https://github.com/benthomasson/ftl-reasons.git@main",
    "authlib>=1.3",
    "itsdangerous>=2.1",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30", "psycopg[binary]>=3.1", "psycopg-pool>=3.1", "pgvector>=0.3", "langgraph-checkpoint-postgres>=2.0"]
ollama = ["langchain-ollama>=0.3"]

[project.scripts]
reasons-service = "reasons_service.app:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reasons_service"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
